# RT

./: CMakeLists.txt  Makefile  README.md  RT  tmp_trace_ray.c
frameworks/minilibx_macos/: mlx.h
includes/: rendering.h.cl  rt.h
opencl/: effects.cl  intersections.cl  render.cl
scenes/: box1.sc  map1.sc  map2.sc  map3.sc  map4.sc  map5.sc  map5c.sc  ref_raf.sc  stange.sc
src/: color_vector.c  get_obj.c  handlers.c  main.c  opencl1.c  opencl2.c  read_help.c  readf.c  rt.h
